--- a/angular.json
+++ b/angular.json
@@ -26,10 +26,12 @@
 						"inlineStyleLanguage": "scss",
 						"assets": ["src/favicon.ico", "src/assets"],
 						"styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
-            ],
-						"scripts": []
+							"@angular/material/prebuilt-themes/indigo-pink.css",
+							"src/styles.scss",
+							"./node_modules/leaflet/dist/leaflet.css",
+							"./node_modules/leaflet-draw/dist/leaflet.draw.css"
+						],
+						"scripts": ["./node_modules/leaflet/dist/leaflet.js"]
 					},
 					"configurations": {
 						"production": {
@@ -53,13 +55,13 @@
 							"vendorChunk": true,
 							"extractLicenses": false,
 							"sourceMap": true,
-              "namedChunks": true,
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.development.ts"
-                }
-              ]
+							"namedChunks": true,
+							"fileReplacements": [
+								{
+									"replace": "src/environments/environment.ts",
+									"with": "src/environments/environment.development.ts"
+								}
+							]
 						}
 					},
 					"defaultConfiguration": "production"
@@ -88,10 +90,7 @@
 						"polyfills": ["zone.js", "zone.js/testing"],
 						"tsConfig": "tsconfig.spec.json",
 						"assets": ["src/favicon.ico", "src/assets"],
-						"styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
-            ],
+						"styles": ["@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"],
 						"scripts": []
 					}
 				}
