--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,15 @@
 						"polyfills": ["zone.js"],
 						"tsConfig": "tsconfig.app.json",
 						"inlineStyleLanguage": "scss",
-						"assets": ["src/favicon.ico", "src/assets"],
+						"assets": [
+							"src/favicon.ico",
+							"src/marker-shadow.png",
+							"src/marker-icon.png",
+							"src/marker-icon-2x.png",
+							"src/layers.png",
+							"src/layers-2x.png",
+							"src/assets"
+						],
 						"styles": [
 							"@angular/material/prebuilt-themes/indigo-pink.css",
 							"src/styles.scss",
